--- a/Talk.ipynb
+++ b/Talk.ipynb
@@ -8,7 +8,12 @@
     }
    },
    "source": [
-    "![Is it a bird? Is it a plane? Accelerating Python with numba](img/cover.png)"
+    "<header style=\"background-image: url('img/metropolis-tv-series-pic.jpg'); background-size: cover; padding: 50px 0;font-size: 1.5em;background-repeat: no-repeat;\">\n",
+    "  <div style=\"padding: 10px 25px; background-color: #fff9 !important;\">\n",
+    "  <h1 style=\"color: black;text-shadow: #999 5px 5px 0px; margin-bottom: 2em\">Is it a bird?<br/>Is it a plane?<br/>Accelerating Python with numba</h1>\n",
+    "  <h2 style=\"text-align: right;font-size: 1em;\">Juan Luis Cano Rodríguez &lt;hello@juanlu.space&gt;<br>2020-02-06 @ USAL</h2>\n",
+    "  </div>\n",
+    "  </header>"
    ]
   },
   {
