--- a/Talk.ipynb
+++ b/Talk.ipynb
@@ -44,7 +44,7 @@
     "# Who is this guy?\n",
     "\n",
     "* **Aerospace Engineer** with a passion for orbits 🛰\n",
-    "* Chair of the **Python España** non profit and co-organizer of **PyCon Spain** 🐍\n",
+    "* Former chair of the **Python España** non profit and former co-organizer of **PyCon Spain** 🐍\n",
     "* **Software Developer** at **Satellogic** 🌍\n",
     "* Free Software advocate and Python enthusiast 🕮\n",
     "* Hard Rock lover 🎸\n",
